# DEDAL_bioinformatica

./: .gitignore  ANALISIS.md  INFORME_FINAL.md  README.md  pyproject.toml  test.ipynb
proyecto/: blosum.py  metrics.py  pfam_data.py  plots.py  results.csv  results_tuned.csv  run_benchmark.py  sampling.py  sw_affine.py  tune_gaps.py
